# modmemcache

./: LICENSE  Makefile.am  README  configure.ac  svn-commit.tmp
example/: Makefile  Makefile.am  Makefile.in  mod_memcache_example.c
m4/: apr_memcache.m4
src/: Makefile.am  mod_memcache.c  mod_memcache.h
